--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^10.16.4",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tw-elements": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
